[metadata]
name = mgmetis
author = Qiao Chen
author_email = benechiao@gmail.com
url = https://github.com/chiao45/mgmetis
description = METIS partitioner for mesh and graph
long-description = file: README.rst
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Cython
    Programming Language :: C
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development
    Operating System :: Unix
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License

[options]
setup_requires =
    setuptools
install_requires =
    numpy
    Cython
tests_require =
    pytest
    meshio
python_requires = >= 3.6
include_package_data = True
packages=find:

[flake8]
ignore =
    E226
    W503
    W504
    E203
max-line-length = 120
split_before_arithmetic_operator = true
exclude = tests/*
max-complexity = 12
